[build-system]
requires = ["setuptools >= 61.0", "wheel", "matplotlib >= 3.8.0", "numpy >= 1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HeartbeatsData"
version = "1.0.0"
authors = [
    {"name" = "hopperelec", email = "hopperelec@gmail.com"}
]
description = "Heartbeat data plotter for matplotlib"
readme = "README.MD"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free To Use But Restricted",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hopperelec/HeartbeatsData"
"Bug Tracker" = "https://github.com/hopperelec/HeartbeatsData/issues"

[tool.setuptools]
packages = ["HeartbeatsData"]
